--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,8 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css");
 @import "base";
 @import "mixins";
+@import "variables";
 
-@import "components/balloon.scss";
-@import "components/home.scss";
+@import "components/balloon";
+@import "components/home";
+@import "components/modal";
