--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Emoji');
+
 body {
     margin: 0;
     padding: 0;
@@ -6,4 +8,8 @@ body {
     height: 100vh;
     overflow: hidden;
     font-family: 'Gloria Hallelujah', cursive;
+}
+
+.icon {
+    font-size: 1rem;
 }
