--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,3 @@
-$font-design: "Gloria Hallelujah", cursive;
 $main-bg: #fff;
 $main-color: #1D84B5;
 $sub-color: #f5f5f5;
@@ -34,5 +33,9 @@ $text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
 $font-style: "Montez";
 
+$font-design: "Gloria Hallelujah", cursive;
+
 $mobile-width: 600px;
 $tablet-width: 1024px;
+
+$emoji-font: 'Noto Emoji', sans-serif;
