--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -1,3 +1,7 @@
+.emoji {
+  font-family: $emoji-font;
+}
+
 .home {
   @include flex(flex-start, center);
 
@@ -34,7 +38,7 @@
   height: 100%;
 
   img {
-    width: 150px;
+    width: 12rem;
     object-fit: cover;
   }
 }
@@ -64,18 +68,28 @@
     @include flex(center, center);
 
     .btn {
+      @include flex(center, center);
+
       border-radius: 10px;
       font-family: $font-design;
+      border: 0.5px solid #ccc;
+      gap: 5px;
 
       &:hover {
         cursor: pointer;
       }
     }
 
-    .btn-reload {
+    .btn-reload,
+    .btn-send {
       height: 50px;
       width: 150px;
       font-size: 1.2rem;
+    }
+
+    .btn-send {
+      color: #fff;
+      background-color: $main-color;
     }
   }
 }
